@@ -374,6 +374,20 @@
   (mapcar #'(lambda (slot-spec)
               (let ((slot-definition-class
                       (apply #'direct-slot-definition-class class slot-spec)))
+                (cond ((standard-class-p class)
+                       (unless (or ; for bootstrapping
+                                   (eq slot-definition-class 'standard-direct-slot-definition)
+                                   (and (class-p slot-definition-class)
+                                        (subclassp slot-definition-class <standard-direct-slot-definition>)))
+                         (error (TEXT "Wrong ~S result for class ~S: not a subclass of ~S: ~S")
+                                'direct-slot-definition-class (class-name class)
+                                'standard-direct-slot-definition slot-definition-class)))
+                      ((structure-class-p class)
+                       (unless (and (class-p slot-definition-class)
+                                    (subclassp slot-definition-class <structure-direct-slot-definition>))
+                         (error (TEXT "Wrong ~S result for class ~S: not a subclass of ~S: ~S")
+                                'direct-slot-definition-class (class-name class)
+                                'structure-direct-slot-definition slot-definition-class))))
                 (apply (cond ((eq slot-definition-class 'standard-direct-slot-definition)
                               #'make-instance-<standard-direct-slot-definition>)
                              (t #'make-instance))
